@@ -67,6 +67,7 @@ and recolor all source code output."""
             if 'off' == highlight_type: highlight_type = 'plain'
             pass
         self.debugger.settings['highlight'] = highlight_type
+        self.proc.set_prompt()
         show_cmd = self.proc.commands['show']
         show_cmd.run(['show', 'highlight'])
         return
