@@ -7,6 +7,7 @@ trepan 0.4.8 2015-05-16
 - Add "info frame *number*
 - Set/check max args in subcommands
 - Add completion on "tbreak", "break" and "set highlight"
+- Don't highlight prompt when highlight is plain or off
 - Update online-help
 
 trepan 0.4.7 2015-05-16
